--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <!--Seteo de la pantalla para que la escala sea 1/1-->
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--Acá va el título de la página, que aparece en la pestaña-->
-            <title>Plantilla para modificar de HTML y CSS</title>
+            <title>Plantilla modificada</title>
         <!--Declaración de estilos en CSS-->
         <link rel="stylesheet" href="estilos.css">
         <!--Declaración de favicon (Icono de Favoritos)-->
-        <link  rel="icon"   href="media/logo_B.png" type="image/png" />
+        <link  rel="icon"   href="media/Logotipo.PNG" type="image/png" />
         <!--Declaración de información de la página-->
         <meta name="description" content="Esta es la descripción que aparecerá al buscar o encontrar la página en un navegador o buscador">
 </head>
@@ -37,12 +37,12 @@
     <!--Este es un elemento de navegación (nav) que debe ser único por página HTML. Tiene una clase "row"-->
     <nav class="row">
         <!--Este es un link (a) que lleva hacia otra página (href)-->
-        <a href="#">Inicio</a>
-        <a href="#">Entregas</a>
+        <a href="#">No</a>
+        <a href="#">Entiendo</a>
         <!--Esta es una división con id único "logo" que contiene la imagen del logo-->
-        <div id="logo"><img src="media/logo_B.png" alt="Esta es la descripción del logo por si no carga correctamente"></div>
-        <a href="#">TP 2</a>
-        <a href="#">Contacto</a>
+        <div id="logo"><img src="media/Logotipo.PNG" alt="Esta es la descripción del logo por si no carga correctamente"></div>
+        <a href="#">Nada</a>
+        <a href="#">Help</a>
     </nav>
 
     <!--Banner con información dentro-->
@@ -52,18 +52,18 @@
         <div class="banner_info">
             <div class="colores">
                 <!--Esta división tiene un id único "color#" que debe ser único por documento html-->
-                <div id="color1" class="color"><img class="icon" src="media/icon1.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color2" class="color"><img class="icon" src="media/icon2.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color3" class="color"><img class="icon" src="media/icon3.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
-                <div id="color4" class="color"><img class="icon" src="media/icon4.png" alt="Esta es la descripción del icono por si no carga correctamente"></div>
+                <div id="color1" class="color"><img class="icon" src="media/montanas.PNG" alt="Esta es la descripción del icono por si no carga correctamente"></div>
+                <div id="color2" class="color"><img class="icon" src="media/Luna.PNG" alt="Esta es la descripción del icono por si no carga correctamente"></div>
+                <div id="color3" class="color"><img class="icon" src="media/lupa.PNG" alt="Esta es la descripción del icono por si no carga correctamente"></div>
+                <div id="color4" class="color"><img class="icon" src="media/reloj.PNG" alt="Esta es la descripción del icono por si no carga correctamente"></div>
             </div>
             <!--Este es un título de clase 1 (El más importante)-->
-            <h1>Cambiemos colores, textos, tipografía
+            <h1>No estoy segura si está bien esto que estoy haciendo
                 <!--Salto de línea--><br>
-                 e imagenes en esta página.</h1>
+                 pero bueno, tal vez salga, espero.</h1>
             <!--Este es un párrafo de texto-->
-            <p>¡Inspecciona el código para ver que es cada cosa!</p>
-            <a href="#" class="btn">Descargar esta plantilla</a>
+            <p>Por lo que veo me parece que si?, IDK</p>
+            <a href="#" class="btn">Pasa el mouse, cambia de color</a>
         </div>
     </div>
 
